--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "nuxt-a11y",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "nuxt-app",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "nuxt build",
+    "dev": "nuxt dev --open",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "nuxt": "^3.12.4",
+    "vue": "latest"
+  },
   "volta": {
     "node": "22.5.1"
   }
