--- a/nuxt3-a11y/package.json
+++ b/nuxt3-a11y/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev --open",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -12,12 +12,5 @@
   "dependencies": {
     "nuxt": "^3.12.4",
     "vue": "latest"
-  },
-  "devDependencies": {
-    "axe-core": "^4.10.0",
-    "vue-axe": "^2.4.4"
-  },
-  "volta": {
-    "node": "22.5.1"
   }
 }
